<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_not_found">Reminder not found!</string>
    <string name="reminders_not_found">Reminders not found</string>
    <string name="test_exception">Test Exception</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>

    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_added">Geofence Added</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="no_geofence_trigger">No Geofence Trigger found!</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="register">REGISTER</string>
    <string name="please_register">Please Register your Account</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="valid_password">Please enter a valid password</string>
    <string name="email_error">Unable to register user with email</string>
    <string name="no_user">com.google.firebase.auth.FirebaseAuthInvalidUserException: There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="invalid_password">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The password is invalid or the user does not have a password.</string>
    <string name="instruct_select_location">Please click anywhere on the map or on any Point Of Interest (POI) to select a location</string>
    <string name="confirm_logout">Confirm Logout?</string>
    <string name="delete_all_reminders">Delete All Reminder</string>
    <string name="confirm_delete_all">Are you sure you want to delete all reminders?</string>
    <string name="geofence_removed">Geofence removed</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="reminders_deleted">Reminders deleted</string>
    <string name="delete_edit_reminder">Delete or Edit Reminder?</string>

    <!-- Geofence Permission Strings -->
    <string name="permission_rationale">Location permission needed for the core functionality of the app</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="location_setting_off">Please turn on device location in Settings and try again</string>
    
    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="please_fill_all_details">Please fill all the details.</string>
    <string name="unknown_geofence_error">Unknown Geofence Error</string>
</resources>
