<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.project4.authentication.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar">

        <TextView
            android:id="@+id/introTv"
            android:layout_width="246dp"
            android:layout_height="67dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_the_location_reminder_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/introTv"
            app:layout_constraintStart_toStartOf="@+id/introTv"
            app:layout_constraintTop_toBottomOf="@+id/introTv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/CustomEditTextStyle"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.emailAddress}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginEnd="@dimen/padding_small"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/introTv"
            app:layout_constraintStart_toStartOf="@+id/introTv"
            app:layout_constraintTop_toBottomOf="@+id/email_et" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/CustomEditTextStyle"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/login"
            android:onClick="@{() -> loginViewModel.onLogin()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/google_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>